--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,7 +16,7 @@ body {
 	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	line-height: 1.5;
-	color: #606c71;
+	color: #8a6d3b;
 }
 
 /* SET STYLES FOR BANNER */
@@ -25,7 +25,7 @@ body {
 	padding-bottom: 48px;
 	text-align: center;
 	background: #392986;
-	color: aliceblue;
+	color: black;
 	background-image: linear-gradient(120deg, #e80707, #e5ff0c);
 }
 
