--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,9 +46,9 @@
         
         <li><a href="{{ site.baseurl }}">Home</a></li>
       <li><a href="{{ site.github.page2 }}">Grammar</a></li>
-      <li><a href="{{ site.github.page3 }}">Page 3</a></li>
-      <li><a href="{{ site.github.page4 }}">Page 4</a></li>
-      <li><a href="{{ site.github.page5 }}">Page 5</a></li>
+      <li><a href="{{ site.github.page3 }}">Culture</a></li>
+      <li><a href="{{ site.github.page4 }}">History</a></li>
+      <li><a href="{{ site.github.page5 }}">Numbers</a></li>
         
     </ul>
     </div>
