--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,7 +13,7 @@
 body {
 	padding: 0;
 	margin: 0;
-	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Georgia", "cursive";
 	font-size: 16px;
 	line-height: 1.5;
 	color: #8a6d3b;
