--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,6 +19,11 @@ body {
 	color: #8a6d3b;
 }
 
+h1 {
+       font-weight: bold;
+}
+
+
 /* SET STYLES FOR BANNER */
 .jumbotron {
 	padding-top: 48px;
