--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,7 @@
       <li><a href="{{ site.github.page3 }}">Culture</a></li>
       <li><a href="{{ site.github.page4 }}">History</a></li>
       <li><a href="{{ site.github.page5 }}">Numbers</a></li>
+      <li><a href="{{ site.github.page6 }}">Tongue Twisters</a></li>  
         
     </ul>
     </div>
